# tiny-std

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark_atomic_shared_ptr.cpp  benchmark_function.cpp  benchmark_waitfree_spsc_queue.cpp
doc/: any.md  function.md  hazard_pointer.md  smart_pointers.md  span.md  vectors.md  waitfree_spsc_queue.md
module/: CMakeLists.txt  any.cppm  function.cppm  hazard_pointer.cppm  span.cppm  tinystd.cppm  type_traits.cppm  waitfree_spsc_queue.cppm
module/helpers/: manual_lifetime.cpp
module/smart_pointers/: atomic_shared_ptr.cppm  control_block.cpp  enable_shared_from_this.cppm  shared_ptr.cppm  unique_ptr.cppm  weak_ptr.cppm
module/vectors/: inplace_vector.cppm  small_vector.cppm  vector.cppm  vector_mixin.cpp
test/: CMakeLists.txt  test_any.cpp  test_atomic_shared_ptr.cpp  test_enable_shared_from_this.cpp  test_function.cpp  test_hazard_pointer.cpp  test_shared_ptr.cpp  test_span.cpp  test_unique_ptr.cpp  test_vectors.cpp  test_waitfree_spsc_queue.cpp  test_weak_ptr.cpp
